<resources>
    <string name="app_name">GMAF Client</string>

    <string name="content_description_image">Image</string>
    <string name="content_description_audio">Audio</string>
    <string name="content_description_document">Document</string>
    <string name="content_description_no_data">No data</string>

    <string name="fragemt_search">Search</string>
    <string name="fragemt_results">Results</string>
    <string name="fragemt_settings">Settings</string>

    <string name="search">Search</string>
    <string name="add_image_from_url">Add image from url</string>
    <string name="add_image_from_folder">Add images from folder</string>
    <string name="add_example_images">Add example images</string>
    <string name="image">Image…</string>
    <string name="search_recommended">Search for recommended media of </string>
    <string name="search_similar">Search for similar media of </string>
    <string name="query_creation_failed">Query creation failed</string>
    <string name="no_endpoint_warning">Using local test files - No api endpoint defined! Please change the endpoint in the settings.</string>
    <string name="help">Help</string>

    <string name="loading_results_to_show">Loading results...</string>
    <string name="no_results_to_show">No results to show!</string>
    <string name="no_internet">No internet connection!</string>
    <string name="no_results_show">No results to show!\n Please start a new media search.</string>
    <string name="graph_code">Graphcode</string>
    <string name="query_chart">Query Chart</string>
    <string name="no_graphcode_available">No GraphCode available!</string>

    <string name="api_settings">Api settings</string>
    <string name="developer_settings">Developer settings</string>
    <string name="api_url_title">Server URL</string>
    <string name="api_url_summary">Switch between different endpoints to set a test server, for example.</string>
    <string name="api_url_default"></string>
    <string name="image_quality_title">Image quality</string>
    <string name="image_quality_summary">Select a lower quality to reduce traffic and increase loading speed.</string>
    <string name="deactivate_logging_title">Deactivate logging</string>
    <string name="deactivate_logging_summary">This stops printing to the android logcat.</string>

    <string name="search_similar_media">Search similar media of\u0020</string>
    <string name="search_recommended_media">Search recommended media of\u0020</string>

    <string-array name="SearchSimilarMediaQueries">
        <item>Search for $media_description</item>
        <item>Show me $media_description</item>
        <item>Find $media_description</item>
        <item>Search similar media about $media_description</item>
        <item>Show similar media about $media_description</item>
        <item>Find similar media about $media_description</item>
        <item>Search similar media with $media_description</item>
        <item>Show similar media with $media_description</item>
        <item>Find similar media with $media_description</item>
        <item>Search similar media for $media_description</item>
        <item>Show similar media for $media_description</item>
        <item>Find similar media for $media_description</item>
    </string-array>

    <string-array name="SearchRecommendedMediaQueries">
        <item>Search recommended media about $media_description</item>
        <item>Show recommended media about $media_description</item>
        <item>Find recommended media about $media_description</item>
        <item>Search recommended media with $media_description</item>
        <item>Show recommended media with $media_description</item>
        <item>Find recommended media with $media_description</item>
        <item>Search recommended media for $media_description</item>
        <item>Show recommended media for $media_description</item>
        <item>Find recommended media for $media_description</item>
    </string-array>
</resources>